# antibody-engineering

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: max_affinity.parquet  max_distance.parquet  max_informative.parquet  metrics.csv
notes-and-references/: Engelhardt-notes.md  Notes-ml-for-protein-engineering.md  problem-notes.md
src/: Candidate Generation.ipynb  ETL.py  Fitness Modeling.ipynb  download_data.py  nn_model.py  utils.py
